// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Note /> matches snapshot 1`] = `
<Fragment>
  <NoteContents
    note={
      Object {
        "body": "note body",
        "created_at": "",
        "id": 1,
        "tags": Array [
          "tag1",
        ],
        "title": "note title",
        "updated_at": "",
        "user_id": 2,
      }
    }
    onDeleteNote={[Function]}
    onUpdateNote={[Function]}
    search=""
    setCreatingSubNote={[Function]}
    setEdit={[Function]}
    subNotes={Map {}}
    titles={Map {}}
  />
  <ConfirmationDialog
    message="Are you sure?"
    negative="No"
    onNegative={[Function]}
    onPositive={[Function]}
    open={false}
    positive="Yes"
    title="If you close this editor, you will lose your changes."
  />
  <ForwardRef(Dialog)
    classes={
      Object {
        "root": undefined,
      }
    }
    fullScreen={false}
    fullWidth={true}
    maxWidth="lg"
    onClose={[Function]}
    open={false}
  >
    <Suspense
      fallback={
        <Loading
          color="#000000"
          delay={0}
          height={64}
          type="spin"
          width={64}
        />
      }
    />
  </ForwardRef(Dialog)>
</Fragment>
`;

exports[`<Note /> matches snapshot 2`] = `
<Fragment>
  <ConfirmationDialog
    message="Are you sure?"
    negative="No"
    onNegative={[Function]}
    onPositive={[Function]}
    open={false}
    positive="Yes"
    title="If you close this editor, you will lose your changes."
  />
  <ForwardRef(Dialog)
    classes={
      Object {
        "root": undefined,
      }
    }
    fullScreen={false}
    fullWidth={true}
    maxWidth="lg"
    onClose={[Function]}
    open={false}
  >
    <Suspense
      fallback={
        <Loading
          color="#000000"
          delay={0}
          height={64}
          type="spin"
          width={64}
        />
      }
    />
  </ForwardRef(Dialog)>
</Fragment>
`;

exports[`<Note /> matches snapshot 3`] = `
<Fragment>
  <ConfirmationDialog
    message="Are you sure?"
    negative="No"
    onNegative={[Function]}
    onPositive={[Function]}
    open={false}
    positive="Yes"
    title="If you close this editor, you will lose your changes."
  />
  <ForwardRef(Dialog)
    classes={
      Object {
        "root": undefined,
      }
    }
    fullScreen={false}
    fullWidth={true}
    maxWidth="lg"
    onClose={[Function]}
    open={false}
  >
    <Suspense
      fallback={
        <Loading
          color="#000000"
          delay={0}
          height={64}
          type="spin"
          width={64}
        />
      }
    />
  </ForwardRef(Dialog)>
</Fragment>
`;
